Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-02-07 (SVN):
    * timidity: cured a (bogus) uninitialized warning from gcc 3.3 and
      earlier versions in read_meta_data(). added an index safety check
      to mid_song_get_meta(). defined a MID_META_MAX macro (currently
      equal to the last MidSongMetaId enum value of MID_SONG_COPYRIGHT)
      and limited the MidSong meta_data array size to MID_META_MAX+1.

2013-02-07 (SVN):
    * timidity: renamed the macro FSCALE to TIM_FSCALE to avoid possible
      clashes with system headers. renamed FSCALENEG to TIM_FSCALENEG
      for consistency. new macro names are in line with timidity++-2.xx.

2013-02-07 (SVN):
    * timidity/resample.c (pre_sample): a simplification (use v5 as an
      intermediate variable in computation of v) and a fix (assignment
      of last two samples) from timidity++.

2013-02-07 (SVN):
    * snd_timidity.c: dls support, mostly for my testing purposes. built
      only when TIMIDITY_USE_DLS is defined (see the Makefile), which is
      not enabled by default.

2013-02-07 (SVN):
    * made safe_malloc() of timidity actually safe: it relies on setjmp
      and longjmp using a jmp_buf private to timidity. safe_malloc() is
      now used only after doing a setjmp(), otherwise we directly use
      malloc() and check its return. safe_malloc() does a longjmp() upon
      allocation failure: during timidity initialization, jump point is
      either mid_init_no_config() or read_config_file(), and a failure
      results in a mid_exit() to free all the allocated memory until
      that point. if initialization is successful, then safe_malloc() is
      used during song loading and a failure jumps to mid_song_load()
      resulting in a mid_song_free() to free all memory allocated for
      the song until that point. all functions returning safe_malloc'ed
      local pointer variables are converted to work properly in case of